fixed... should work with 1.8 now